@@ -520,9 +520,13 @@ static void update_frequency(struct context_data *ctx, int chn, int t)
 			}
 		} 
 
-		/* Workaround for panic.s3m (from Toru Egashira's NSPmod) */
-		if (xc->period <= 8)
+		/* Check for invalid periods (from Toru Egashira's NSPmod)
+	         * panic.s3m has negative periods
+		 * ambio.it uses low (~8) period values
+		 */
+		if (xc->period < 1) {
 			xc->volume = 0;
+		}
 	}
 
 	if (t % p->speed == 0) {
